# notebook-degrease

./: README.md  pyproject.toml
src/notebook_degrease/: __init__.py
